--- a/app/index.html
+++ b/app/index.html
@@ -7,4 +7,4 @@ active: home
 <div class="imageContainer" style="float:right;"></div>
 
 
-<p id="mainHeader">Hi. I'm <span id="name">Aaron Foltz</span>, a <br/>Software Engineer, Technology Connoisseur, Husband, and Father.</p>
+<p id="mainHeader">Hi. I'm <span id="name">Aaron Foltz</span>, a <br/>Software Engineer, Husband, and Father.</p>
