--- a/app/index.html
+++ b/app/index.html
@@ -6,5 +6,5 @@ active: home
 
 <div class="imageContainer" style="float:right;"></div>
 
-
-<p id="mainHeader">Hi. I'm <span id="name">Aaron Foltz</span>, a <br/>Software Engineer, Husband, and Father.</p>
+<div class="headerContainer">
+<p id="mainHeader">Hi. I'm <span id="name">Aaron Foltz</span>, a Software Engineer, Husband, and Father.</p></div>
