updates to center the main header, now using transform hack

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@ title: Home
 active: home
 ---
 
-<div class="imageContainer" style="float:right;"></div>
+<div class="constrainedContent">
+    <div class="imageContainer" style="float:right;"></div>
 
-<div class="headerContainer">
-<p id="mainHeader">Hi. I'm <span id="name">Aaron Foltz</span>, a Software Engineer, Husband, and Father.</p></div>
+    <div class="headerContainer">
+        <p id="mainHeader">Hi. I'm <span id="name">Aaron Foltz</span>, a Software Engineer, Husband, and Father.</p>
+    </div>
+</div>
