--- a/app/projects.html
+++ b/app/projects.html
@@ -4,7 +4,7 @@ title: Projects
 active: projects
 ---
 
-<div id="content-main">
+<div id="content-main" class="constrainedContent">
 	<!-- Main content can go in here -->
 	<div id="repos"></div>
 </div>
